<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.ssb.dapla.readiness</groupId>
    <artifactId>readiness</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>${project.artifactId}</name>

    <properties>
        <jdk.version>11</jdk.version>
        <maven.compiler.release>${jdk.version}</maven.compiler.release>
        <maven.compiler.testRelease>${jdk.version}</maven.compiler.testRelease>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <slf4j.version>1.7.30</slf4j.version>
    </properties>

    <repositories>
        <repository>
            <id>ssb-bip-releases</id>
            <url>https://nexus.prod-bip-ci.ssb.no/repository/maven-public/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.14.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.5.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>
                            --add-opens no.ssb.dapla.readiness/no.ssb.dapla.readiness=ALL-UNNAMED
                        </argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>ssb-bip</id>
            <distributionManagement>
                <repository>
                    <id>ssb-bip-releases</id>
                    <name>SSB Nexus Releases</name>
                    <url>https://nexus.prod-bip-ci.ssb.no/repository/maven-releases/</url>
                </repository>
                <snapshotRepository>
                    <id>ssb-bip-snapshots</id>
                    <name>SSB Snapshot Repository</name>
                    <url>https://nexus.prod-bip-ci.ssb.no/repository/maven-snapshots/</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>
    </profiles>
</project>
